--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
 
     <div class="container">
-        <h1>Quét để tải ứng dụng<br>Giao Nhanh</h1>
+        <h1>Quét để tải ứng dụng<br>Tài Xế Giao Nhanh</h1>
         <div id="qrcode"></div>
     </div>
 
