--- a/index.html
+++ b/index.html
@@ -31,15 +31,19 @@
         }
 
         /* Tiêu đề chính */
-        h1 {
-            font-size: 28px;
-            font-weight: bold;
-            color: #f8ff0b; /* Màu chữ vàng */
-            text-shadow: 2px 2px 5px #fe8024; /* Đổ bóng viền ngoài */
-            margin-bottom: 20px;
-            line-height: 1.3;
-        }
-
+       h1 {
+    font-size: 28px;
+    font-weight: bold;
+    color: #f8ff0b; /* Màu chữ vàng */
+    text-shadow: 
+        -2px -2px 0px #000,  
+         2px -2px 0px #000,  
+        -2px  2px 0px #000,  
+         2px  2px 0px #000,  /* Viền đen */
+         4px  4px 5px #fe8024; /* Đổ bóng màu cam */
+    margin-bottom: 20px;
+    line-height: 1.3;
+}
         /* QR Code */
         #qrcode {
             margin: auto;
