--- a/redirect.html
+++ b/redirect.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đang chuyển hướng...</title>
     <script>
-    var androidLink = "https://play.google.com/store/apps/details?id=com.giaonhanhVNTaiXe&hl=vi";
-    var iosLink = "https://apps.apple.com/vn/app/giao-nhanh-t%C3%A0i-x%E1%BA%BF/id6476805481?l=vi";
+    var androidLink = "https://play.google.com/store/apps/details?id=com.giaonhanhVNTaiXe&pcampaignid=web_share";
+    var iosLink = "https://apps.apple.com/vn/app/giaonhanhvn-taixe/id6740518944?l=vi";
 
     window.onload = function() {
         var messageElement = document.getElementById("message");
