--- a/redirect.html
+++ b/redirect.html
@@ -6,7 +6,7 @@
     <title>Đang chuyển hướng...</title>
     <script>
     var androidLink = "https://play.google.com/store/apps/details?id=com.giaonhanhVNTaiXe&pcampaignid=web_share";
-    var iosLink = "https://apps.apple.com/vn/app/giaonhanhvn-taixe/id6740518944?l=vi";
+    var iosLink = "https://apps.apple.com/am/app/giaonhanhvn-taixe/id6740518944";
 
     window.onload = function() {
         var messageElement = document.getElementById("message");
